Finished Chicken Carbonara recipe page

--- a/recipes/chicken-carbonara.html
+++ b/recipes/chicken-carbonara.html
@@ -13,16 +13,43 @@
                 than this one, by all means, email it to me (paolojosemari.zafra@gmail.com) so that I can take a look at it (Again, that is all I can do as I don't cook. I code).</p>
         <br>
         <h3>Ingredients</h3>
-        <ul>
-            <li>1 (16 ounce) package spaghetti</li>
-            <li>2 teaspoons olive oil</li>
-            <li>1 (4 ounce) package pancetta bacon, diced</li>
-            <li>2 cloves garlic, minced</li>
-            <li>2<sup>1</sup>&frasl;<sub>2</sub> cups whipping cream</li>
-            <li><sup>1</sup>&frasl;<sub>4</sub> cup chopped fresh basil</li>
-            <li><sup>1</sup>&frasl;<sub>4</sub> chopped fresh italian parsley</li>
-            <li>4 cups shredded cooked chicken</li>
-            <li>salt and freshly ground black pepper to taste</li>
-        </ul>
+            <ul>
+                <li>1 (16 ounce) package spaghetti</li>
+                <li>2 teaspoons olive oil</li>
+                <li>1 (4 ounce) package pancetta bacon, diced</li>
+                <li>2 cloves garlic, minced</li>
+                <li>2<sup>1</sup>&frasl;<sub>2</sub> cups whipping cream</li>
+                <li><sup>1</sup>&frasl;<sub>4</sub> cup chopped fresh basil</li>
+                <li><sup>1</sup>&frasl;<sub>4</sub> chopped fresh italian parsley</li>
+                <li>4 cups shredded cooked chicken</li>
+                <li>salt and freshly ground black pepper to taste</li>
+            </ul>
+        <br>
+        <h3>Directions</h3>
+            <ol>
+                <li> Cook Spaghetti
+                    <ol type="a">
+                        <li>Bring a large pot of lightly salted water to a boil</li>
+                        <li>Cook spaghetti in the boiling water while stirring ocassionally. Wait until tender yet firm to bite. This will take around 12 minutes (approx)</li>
+                        <li>Drain</li>
+                    </ol>
+                </li>
+                <li> Saute pancetta and garlic
+                    <ol type="a">
+                        <li>While the spaghetti is cooking, heat olive oil in a large frying pan over medium heat</li>
+                        <li>Add pancetta and garlic and saute until both are brown and crispy</li>
+                        <li>Remove from heat and cool slightly</li>
+                    </ol>
+                </li>
+                <li> Whisk cream, Parmesan, egg yolks, basil and parsley together in one bow until weill blended</li>
+                <li> Mix over pan
+                    <ol type="a">
+                        <li>Stir chicken into pancetta mixture until combined</li>
+                        <li>Add cooked spaghetti and cream mixture</li>
+                        <li>Toss over medium-low heat until chicken is heated through and sauce forms a thick coating over the spaghetti. Note: Do not boil or the egg will scramble</li>
+                        <li>Season with salt and pepper and transfer to a large, wide serving bowl</li>
+                    </ol>
+                </li>
+            </ol>
     </body>
 </html>
