Added All Natural Ramen recipe page

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <a href="./recipes/chicken-carbonara.html">Chicken Carbonara</a>
+        <a href="./recipes/chicken-carbonara.html">Chicken Carbonara</a> <br>
+        <a href="./recipes/all-natural-ramen-noodles.html">All Natural Ramen Noodles</a>
     </body>
 </html>
