--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <body>
         <h1>Odin Recipes</h1>
         <a href="./recipes/chicken-carbonara.html">Chicken Carbonara</a> <br>
-        <a href="./recipes/all-natural-ramen-noodles.html">All Natural Ramen Noodles</a>
+        <a href="./recipes/all-natural-ramen-noodles.html">All Natural Ramen Noodles</a><br>
+        <a href="./recipes/pad-thai.html">Pad Thai</a><br>
     </body>
 </html>
